[gd_scene load_steps=6 format=3 uid="uid://kveuda4p7rla"]

[ext_resource type="Script" uid="uid://cqm3b8up6gli0" path="res://scenes/entities/entity.gd" id="1_o12gi"]
[ext_resource type="Script" uid="uid://dq7vr586kdkrj" path="res://scenes/entities/range_area.gd" id="2_7agfi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5ixxa"]
radius = 5.0

[sub_resource type="SpriteFrames" id="SpriteFrames_70kwc"]
animations = [{
"frames": [],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [],
"loop": true,
"name": &"moving",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_o12gi"]

[node name="Entity" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 2
collision_mask = 3
script = ExtResource("1_o12gi")

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5ixxa")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_70kwc")
animation = &"moving"

[node name="RangeArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("2_7agfi")

[node name="CollisionCircle" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource("CircleShape2D_o12gi")

[node name="NavigationAgent" type="NavigationAgent2D" parent="."]
path_desired_distance = 0.1
target_desired_distance = 0.1
path_max_distance = 10.0
path_postprocessing = 2
radius = 16.0

[node name="HealthRegen" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="RangeArea" to="." method="_on_range_area_area_entered"]
[connection signal="area_exited" from="RangeArea" to="." method="_on_range_area_area_exited"]
[connection signal="body_entered" from="RangeArea" to="." method="_on_range_area_body_entered"]
[connection signal="body_exited" from="RangeArea" to="." method="_on_range_area_body_exited"]
[connection signal="timeout" from="HealthRegen" to="." method="_on_health_regen_timeout"]
